--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ http://www.tooplate.com/view/2092-shelf
             <header class="tm-site-header">
     <div style="display:flex; align-items:center; gap:20px;">
         <!-- Logo NMH -->
-        <img src="img/logo-nmh.png" alt="Logo NMH" style="height:60px;">
+        <img src="img/logo-nmh.png" alt="Logo NMH" style="height:300px;">
 
         <!-- Judul situs -->
         <div>
-            <h1 class="tm-site-name">NurulMH</h1>
-            <p class="tm-site-description">FisikaUNM</p>
+            <h1 class="tm-site-name"></h1>
+            <p class="tm-site-description"></p>
         </div>
     </div>
 
@@ -227,6 +227,7 @@ http://www.tooplate.com/view/2092-shelf
 </body>
 
 </html>
+
 
 
 
