--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ http://www.tooplate.com/view/2092-shelf
                 
 
             <footer>
-                Copyright &copy; <span class="tm-current-year">2018</span> FISIKA UNIVERSITAS NEGERI MAKASSAR
+                Copyright &copy; <span class="tm-current-year">2018</span> NMH
                 
                 - Designed by <a href="https://www.facebook.com/tooplate" target="_parent">Hashifah Adhwa Hermawan</a>
             </footer>    
@@ -273,6 +273,7 @@ http://www.tooplate.com/view/2092-shelf
 </body>
 
 </html>
+
 
 
 
