--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Template 2092 Shelf
 http://www.tooplate.com/view/2092-shelf
 
 -->
-    <title>FISIKA - Universitas Negeri Makassar</title>
+    <title>Media - NMH</title>
 
     <!-- load stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">  <!-- Google web font "Open Sans" -->
@@ -35,7 +35,49 @@ http://www.tooplate.com/view/2092-shelf
         
         <!-- WRAPPER LOGO + TEKS DI ATAS GAMBAR HEADER -->
                 <!-- WRAPPER LOGO + TEKS DALAM KOTAK PANJANG BIRU -->
-file:///D:/project%20web/project2/index.html
+<div style="
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;                      /* bikin full lebar */
+    z-index:999;
+    background:linear-gradient(135deg, #0d6efd, #36c3ff);
+    padding:6px 16px;             /* tinggi bar */
+    display:flex;
+    align-items:center;
+    gap:10px;
+    box-shadow:0 3px 8px rgba(0,0,0,0.25);
+">
+    <!-- LOGO -->
+    <img src="img/logo-nmh.png" 
+        alt="Logo NMH" 
+        style="
+            height:56px;
+            display:block;
+        ">
+
+    <!-- TEKS DI SEBELAH KANAN LOGO -->
+    <div style="
+        text-shadow:none;
+        line-height:1;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+    ">
+        <p style="
+            margin:0;
+            font-size:13px;
+            font-weight:700;
+            line-height:1.1;
+            color:white;
+        ">
+            Nurul<br>
+            Muthmainnah<br>
+            Herman
+        </p>
+    </div>
+</div>
+
 
 
 
@@ -229,8 +271,6 @@ file:///D:/project%20web/project2/index.html
 </body>
 
 </html>
-
-
 
 
 
