--- a/index.html
+++ b/index.html
@@ -57,25 +57,28 @@ http://www.tooplate.com/view/2092-shelf
         ">
 
     <!-- TEKS DI SEBELAH KANAN LOGO -->
-    <div style="
-        text-shadow:none;
-        line-height:1;
-        display:flex;
-        flex-direction:column;
-        justify-content:center;
+  <div style="display:flex; flex-direction:column;">
+    <p style="
+        margin:0;
+        font-size:18px;
+        font-weight:900;
+        letter-spacing:2px;
+        line-height:1.1;
+        color:white;
+        text-shadow:0 2px 4px rgba(0,0,0,0.35);
+        font-family: 'Open Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     ">
-        <p style="
-            margin:0;
-            font-size:13px;
-            font-weight:700;
-            line-height:1.1;
-            color:white;
-        ">
-            Nurul<br>
-            Muthmainnah<br>
-            Herman
-        </p>
-    </div>
+        PendwordS
+    </p>
+    <span style="
+        margin-top:3px;
+        width:72px;
+        height:3px;
+        border-radius:999px;
+        background:rgba(255,255,255,0.85);
+        display:block;
+    "></span>
+</div>
 </div>
 
 
@@ -271,6 +274,7 @@ http://www.tooplate.com/view/2092-shelf
 </body>
 
 </html>
+
 
 
 
