--- a/materi/ms1.html
+++ b/materi/ms1.html
@@ -122,6 +122,42 @@
     transform: translateY(0);
     box-shadow: 0 3px 8px rgba(0, 123, 255, 0.5);
   }
+    /* ====== RESPONSIVE FONT UNTUK HP ====== */
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;              /* dasar teks sedikit lebih kecil */
+    line-height: 1.6;
+  }
+
+  .tm-content p,
+  .tm-content li {
+    font-size: 14px;              /* paragraf & list nyaman dibaca */
+    line-height: 1.6;
+  }
+
+  .tm-page-title {
+    font-size: 20px;              /* judul materi diperkecil sedikit */
+  }
+
+  .tm-header .tm-title {
+    font-size: 22px;              /* judul besar di atas */
+  }
+
+  .tm-primary-color {
+    font-size: 13px;              /* nama penulis */
+  }
+
+  .tm-nav.tm-nav-list ul li a {
+    font-size: 13px;              /* menu sidebar lebih rapat di HP */
+    padding: 7px 10px;
+  }
+
+  .btn-kembali-materi {
+    font-size: 13px;
+    padding: 8px 18px;
+  }
+}
+
 
 </style>
 
@@ -244,3 +280,4 @@
 </body>
 
 </html>
+
