--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ http://www.tooplate.com/view/2092-shelf
                     <div class="collapse navbar-collapse tm-main-nav" id="tmMainNav">
                         <ul class="nav nav-fill tm-main-nav-ul">
                             <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                           <li class="nav-item"><a class="nav-link" href="#">Pengabdian Masyarakat</a></li>
+                           <li class="nav-item"><a class="nav-link" href="pm.html">Pengabdian Masyarakat</a></li>
                             <li class="nav-item"><a class="nav-link" href="ms.html">Materi Fisika</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Materi 3</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Materi 4</a></li>
@@ -274,6 +274,7 @@ http://www.tooplate.com/view/2092-shelf
 </body>
 
 </html>
+
 
 
 
