--- a/pm.html
+++ b/pm.html
@@ -238,11 +238,12 @@ http://www.templatemo.com/tm-509-hydro
 
      <!-- SCRIPTS -->
      <script src="js/jquery.js"></script>
-     <script src="js/bootstrap.min1.js"></script>
+     <script src="js/bootstrap1.min.js"></script>
      <script src="js/jquery.stellar.min.js"></script>
      <script src="js/jquery.magnific-popup.min.js"></script>
      <script src="js/smoothscroll.js"></script>
      <script src="js/custom.js"></script>
 
 </body>
+
 </html>
